--- a/css/dynamicg.css
+++ b/css/dynamicg.css
@@ -22,6 +22,11 @@ body {
     gap: 3rem;
 }
 
+.filter {
+    padding: 2rem;
+    z-index: 2;
+}
+
 .gallery-container {
     /*border: 2px solid red;*/
     display: grid;
@@ -80,6 +85,7 @@ position: absolute;
   border-radius: 50%;
   z-index: -1;
   background-color: white;
+  opacity: 20%;
 
 }
 
